--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.18.2",
+    "mongoose": "^7.4.5",
     "typescript": "^5.0.4"
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
     "ts-standard": "^12.0.2"
